--- a/ASCII-Palette/ASCII-Palette.vcxproj
+++ b/ASCII-Palette/ASCII-Palette.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="SFML-Template\SpriteManager.h" />
     <ClInclude Include="SFML-Template\TextureManager.h" />
     <ClInclude Include="SFMLApp.h" />
+    <ClInclude Include="SFMLColorPalette.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -114,6 +115,7 @@
     <ClCompile Include="SFMLApp_OnInit.cpp" />
     <ClCompile Include="SFMLApp_OnRender.cpp" />
     <ClCompile Include="SFMLApp_OnUpdate.cpp" />
+    <ClCompile Include="SFMLColorPalette.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
