--- a/ASCII-Palette/ASCII-Palette.vcxproj.filters
+++ b/ASCII-Palette/ASCII-Palette.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="SFMLCursesChar.h">
       <Filter>SFMLGUIElement</Filter>
     </ClInclude>
+    <ClInclude Include="SFMLCursesWindow.h">
+      <Filter>SFMLGUIElement</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SFML-Template\AnimatedSprite.cpp">
@@ -147,6 +150,9 @@
       <Filter>SFMLGUIElement</Filter>
     </ClCompile>
     <ClCompile Include="SFMLCursesChar.cpp">
+      <Filter>SFMLGUIElement</Filter>
+    </ClCompile>
+    <ClCompile Include="SFMLCursesWindow.cpp">
       <Filter>SFMLGUIElement</Filter>
     </ClCompile>
   </ItemGroup>
