--- a/ASCII-Palette/ASCII-Palette.vcxproj.filters
+++ b/ASCII-Palette/ASCII-Palette.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="SFMLCursesWindow.h">
       <Filter>SFMLGUIElement</Filter>
     </ClInclude>
+    <ClInclude Include="DrawingWindow.h">
+      <Filter>SFML-Template\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SFML-Template\AnimatedSprite.cpp">
@@ -154,6 +157,9 @@
     </ClCompile>
     <ClCompile Include="SFMLCursesWindow.cpp">
       <Filter>SFMLGUIElement</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawingWindow.cpp">
+      <Filter>SFML-Template\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
