--- a/ASCII-Palette/ASCII-Palette.vcxproj
+++ b/ASCII-Palette/ASCII-Palette.vcxproj
@@ -79,6 +79,7 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AltCharsWindow.h" />
     <ClInclude Include="ColorSelector.h" />
     <ClInclude Include="DrawingWindow.h" />
     <ClInclude Include="GameState_DrawingState.h" />
@@ -103,6 +104,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AltCharsWindow.cpp" />
     <ClCompile Include="ASCII-Palette.cpp" />
     <ClCompile Include="ColorSelector.cpp" />
     <ClCompile Include="DrawingWindow.cpp" />
