--- a/ASCII-Palette/ASCII-Palette.vcxproj
+++ b/ASCII-Palette/ASCII-Palette.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="DrawingWindow.h" />
     <ClInclude Include="GameState_LoadState.h" />
     <ClInclude Include="GameState_SaveState.h" />
+    <ClInclude Include="SFMLCursesTextBox.h" />
     <ClInclude Include="StateInfo_CursesWindow.h" />
     <ClInclude Include="GameState_DrawingState.h" />
     <ClInclude Include="SFML-Template\AnimatedSprite.h" />
@@ -132,6 +133,7 @@
     <ClCompile Include="SFMLApp_OnUpdate.cpp" />
     <ClCompile Include="SFMLColorPalette.cpp" />
     <ClCompile Include="SFMLCursesChar.cpp" />
+    <ClCompile Include="SFMLCursesTextBox.cpp" />
     <ClCompile Include="SFMLCursesWindow.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
