--- a/ASCII-Palette/ASCII-Palette.vcxproj.filters
+++ b/ASCII-Palette/ASCII-Palette.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="SFMLGUIElement">
       <UniqueIdentifier>{e5c54946-fb37-4868-8207-2ccc6968873c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="SFMLApp\GameStates">
+      <UniqueIdentifier>{887c1d77-dd4f-4225-a85c-0ad6e8d22ad6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="ReadMe.txt" />
@@ -75,9 +78,6 @@
     <ClInclude Include="SFMLApp.h">
       <Filter>SFMLApp</Filter>
     </ClInclude>
-    <ClInclude Include="GameState_DrawingState.h">
-      <Filter>SFMLApp</Filter>
-    </ClInclude>
     <ClInclude Include="SFMLColorPalette.h">
       <Filter>SFMLGUIElement</Filter>
     </ClInclude>
@@ -97,13 +97,19 @@
       <Filter>SFMLGUIElement</Filter>
     </ClInclude>
     <ClInclude Include="GameState_SaveState.h">
-      <Filter>SFML-Template\Header Files</Filter>
+      <Filter>SFMLApp\GameStates</Filter>
+    </ClInclude>
+    <ClInclude Include="GameState_DrawingState.h">
+      <Filter>SFMLApp\GameStates</Filter>
     </ClInclude>
     <ClInclude Include="GameState_LoadState.h">
-      <Filter>SFML-Template\Header Files</Filter>
+      <Filter>SFMLApp\GameStates</Filter>
+    </ClInclude>
+    <ClInclude Include="SFMLCursesTextBox.h">
+      <Filter>SFMLGUIElement</Filter>
     </ClInclude>
     <ClInclude Include="StateInfo_CursesWindow.h">
-      <Filter>SFMLGUIElement</Filter>
+      <Filter>SFMLApp</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -161,9 +167,6 @@
     <ClCompile Include="SFMLApp_OnRender.cpp">
       <Filter>SFMLApp</Filter>
     </ClCompile>
-    <ClCompile Include="GameState_DrawingState.cpp">
-      <Filter>SFMLApp</Filter>
-    </ClCompile>
     <ClCompile Include="SFMLColorPalette.cpp">
       <Filter>SFMLGUIElement</Filter>
     </ClCompile>
@@ -182,11 +185,17 @@
     <ClCompile Include="AltCharsWindow.cpp">
       <Filter>SFMLGUIElement</Filter>
     </ClCompile>
-    <ClCompile Include="GameState_SaveState.cpp">
-      <Filter>SFML-Template\Source Files</Filter>
+    <ClCompile Include="GameState_DrawingState.cpp">
+      <Filter>SFMLApp\GameStates</Filter>
     </ClCompile>
     <ClCompile Include="GameState_LoadState.cpp">
-      <Filter>SFML-Template\Source Files</Filter>
+      <Filter>SFMLApp\GameStates</Filter>
+    </ClCompile>
+    <ClCompile Include="GameState_SaveState.cpp">
+      <Filter>SFMLApp\GameStates</Filter>
+    </ClCompile>
+    <ClCompile Include="SFMLCursesTextBox.cpp">
+      <Filter>SFMLGUIElement</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
