Added StateInfo to OnResume and StatePop, loading now loads onto a new CursesWindow, and then copies the load using CommandSetCharacters

--- a/ASCII-Palette/ASCII-Palette.vcxproj.filters
+++ b/ASCII-Palette/ASCII-Palette.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="CommandHistoryWindow.h">
       <Filter>SFML-Template\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StateInfo_CursesWindowLoadResult.h">
+      <Filter>SFMLApp\GameStates</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SFML-Template\AnimatedSprite.cpp">
