--- a/ASCII-Palette/ASCII-Palette.vcxproj
+++ b/ASCII-Palette/ASCII-Palette.vcxproj
@@ -111,6 +111,7 @@
     <ClInclude Include="SFMLColorPalette.h" />
     <ClInclude Include="SFMLCursesChar.h" />
     <ClInclude Include="SFMLCursesWindow.h" />
+    <ClInclude Include="StateInfo_CursesWindowLoadResult.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
