--- a/ASCII-Palette/ASCII-Palette.vcxproj
+++ b/ASCII-Palette/ASCII-Palette.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="CommandSetCharacters.h" />
     <ClInclude Include="DrawingWindow.h" />
     <ClInclude Include="GameState_LoadState.h" />
+    <ClInclude Include="GameState_NewDocState.h" />
     <ClInclude Include="GameState_SaveState.h" />
     <ClInclude Include="SFMLCursesTextBox.h" />
     <ClInclude Include="SFMLScrollWindow.h" />
@@ -112,6 +113,7 @@
     <ClInclude Include="SFMLCursesChar.h" />
     <ClInclude Include="SFMLCursesWindow.h" />
     <ClInclude Include="StateInfo_CursesWindowLoadResult.h" />
+    <ClInclude Include="StateInfo_NewDocResult.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -125,6 +127,7 @@
     <ClCompile Include="DrawingWindow.cpp" />
     <ClCompile Include="GameState_DrawingState.cpp" />
     <ClCompile Include="GameState_LoadState.cpp" />
+    <ClCompile Include="GameState_NewDocState.cpp" />
     <ClCompile Include="GameState_SaveState.cpp" />
     <ClCompile Include="SFML-Template\AnimatedSprite.cpp" />
     <ClCompile Include="SFML-Template\FontManager.cpp" />
